Update contact.html - by  mudit

--- a/contact.html
+++ b/contact.html
@@ -1,1 +1,11 @@
-Gitanshu sucker
+Gitanshu Pruthi 
+Changed by Mudit Makkar
+Hello How are yoou
+
+Pratik ankita 
+PRATIK ANKITAAAAAAAAAA 
+ANKITA PRATIK GUPTA
+
+BANIYA FAMILY
+SAVING MONEY IN BEDS
+FILLING BEDS WITH MONEY
